cluster/apps/development/adminer/adminer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: dev-tools
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: adminer
        name: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
