cluster/apps/development/adminer/adminer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-svc
  namespace: dev-tools
  labels:
    app: adminer
spec:
  selector:
    app: adminer
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  type: ClusterIP
