cluster/apps/development/adminer/adminer-ingressroute.yaml
# adminer-local-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adminer-local-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`adminer.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: adminer-svc
          namespace: dev-tools
          port: 8080
